install tailwindcss and daisyUI

--- a/package.json
+++ b/package.json
@@ -10,16 +10,17 @@
     "lint": "biome lint",
     "preview": "vite preview"
   },
-  "dependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
-  },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
+    "@tailwindcss/vite": "^4.0.17",
     "@types/react": "^19.0.12",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
+    "daisyui": "^5.0.9",
     "globals": "^15.15.0",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "tailwindcss": "^4.0.17",
     "typescript": "~5.7.2",
     "vite": "^6.2.3"
   }
