--- a/biome.json
+++ b/biome.json
@@ -7,7 +7,13 @@
   },
   "files": {
     "ignoreUnknown": false,
-    "ignore": ["./.vscode", "**/node_modules", "./tsconfig.*", "./dist"]
+    "ignore": [
+      "./src/index.css",
+      "./.vscode",
+      "**/node_modules",
+      "./tsconfig.*",
+      "./dist"
+    ]
   },
   "formatter": {
     "enabled": true,
@@ -20,7 +26,10 @@
   "linter": {
     "enabled": true,
     "rules": {
-      "recommended": true
+      "recommended": true,
+      "a11y": {
+        "useValidAnchor": "off"
+      }
     }
   },
   "javascript": {
