--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
     "daisyui": "^5.0.9",
+    "dotenv": "^16.4.7",
     "globals": "^15.15.0",
     "json-server": "^1.0.0-beta.3",
     "ky": "^1.7.5",
