feat: create flyff service with simple query

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -25,7 +25,8 @@
     /* Alias paths */
     "paths": {
       "@/*": ["./src/*"],
-      "@components/*": ["./src/components/*"]
+      "@components/*": ["./src/components/*"],
+      "@api/*": ["./src/api/*"]
     }
   },
   "include": ["src"]
