--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 # Client
 VITE_APP_NAME="FlyStack"
+VITE_PROXY_FLYFF_API_BASE_URL="http://localhost:3000"
 
 # Server
 FLYFF_API_BASE_URL="https://api.flyff.com"
