--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "ci": "biome ci",
     "preview": "vite preview",
     "server": "json-server server/db.json",
-    "server:scrap": "tsc -b tsconfig.server.json && node server/dist/scraper.js"
+    "server:scrap": "tsc -b tsconfig.server.json && node server/dist/server/scraper.js"
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
@@ -29,6 +29,7 @@
     "globals": "^15.15.0",
     "json-server": "^1.0.0-beta.3",
     "ky": "^1.7.5",
+    "module-alias": "^2.2.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwindcss": "^4.0.17",
