--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "globals": "^15.15.0",
     "json-server": "^1.0.0-beta.3",
     "ky": "^1.7.5",
+    "lucide-react": "^0.487.0",
     "module-alias": "^2.2.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
