--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "ci": "biome ci",
     "preview": "vite preview",
     "server": "json-server server/db.json",
-    "server:scrap": "tsc -b tsconfig.server.json && node server/dist/scraper.js"
+    "server:scrap": "tsc -b tsconfig.server.json && node server/dist/server/scraper.js"
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
     "@tailwindcss/vite": "^4.0.17",
+    "@tanstack/react-query": "^5.71.1",
+    "@tanstack/react-query-devtools": "^5.71.1",
     "@tanstack/react-router": "^1.114.29",
     "@tanstack/react-router-devtools": "^1.114.29",
     "@tanstack/router-plugin": "^1.114.29",
@@ -27,6 +29,8 @@
     "globals": "^15.15.0",
     "json-server": "^1.0.0-beta.3",
     "ky": "^1.7.5",
+    "lucide-react": "^0.487.0",
+    "module-alias": "^2.2.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwindcss": "^4.0.17",
