feat: add scrapping to items icon

--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,4 @@ VITE_PROXY_FLYFF_API_BASE_URL="http://localhost:3000"
 
 # Server
 FLYFF_API_BASE_URL="https://api.flyff.com"
+ICONS_FOLDER="public/icons"
