--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "daisyui": "^5.0.9",
     "dotenv": "^16.4.7",
     "globals": "^15.15.0",
-    "json-server": "^1.0.0-beta.3",
+    "json-server": "^0.17.4",
     "ky": "^1.7.5",
     "lucide-react": "^0.487.0",
     "module-alias": "^2.2.3",
