--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-dom": "^19.0.0",
     "tailwindcss": "^4.0.17",
     "typescript": "~5.7.2",
+    "usehooks-ts": "^3.1.1",
     "vite": "^6.2.3",
     "zod": "^3.24.2"
   }
