--- a/biome.json
+++ b/biome.json
@@ -29,6 +29,12 @@
     "enabled": true,
     "rules": {
       "recommended": true,
+      "correctness": {
+        "noUnusedFunctionParameters": "error",
+        "noUnusedImports": "error",
+        "noUnusedPrivateClassMembers": "error",
+        "noUnusedVariables": "error"
+      },
       "a11y": {
         "useValidAnchor": "off"
       }
