--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "server:scrap": "tsc -b tsconfig.server.json && node server/dist/server/scraper.js"
   },
   "devDependencies": {
-    "@biomejs/biome": "1.9.4",
+    "@biomejs/biome": "^2.0.0",
     "@tailwindcss/vite": "^4.0.17",
     "@tanstack/react-query": "^5.71.1",
     "@tanstack/react-query-devtools": "^5.71.1",
